--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,5 +1,7 @@
-jumbotron {
-  background-image: url("http://i.imgur.com/WDrSL82.jpg") !important;
+.jumbotron {
+  background-image: url(http://i.imgur.com/WDrSL82.jpg) !important;
+  color: white;
+  background-size: 100% 100%;
 }
 
 
