--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -4,6 +4,14 @@
   background-size: 100% 100%;
 }
 
+.table {
+  width: 35%;
+}
+
+.dashboard {
+
+}
+
 .spot {
   background-color: rgb(213, 212, 212);
   width: 13em;;
