add default coords

--- a/app/templates/components/location-map.hbs
+++ b/app/templates/components/location-map.hbs
@@ -1,7 +1,7 @@
 {{google-map markers=markers
              markerInfoWindowTemplateName='map/default-window'
-             lat=centerLat
-             lng=centerLng
+             lat=_centerLat
+             lng=_centerLng
              zoom=zoom
              gopt_zoomControl=false
              type='map'}}
