holy shit this is going to break stuff
like a lot

--- a/app/templates/components/location-map.hbs
+++ b/app/templates/components/location-map.hbs
@@ -4,7 +4,8 @@
              lng=centerLng
              zoom=zoom
              gopt_zoomControl=false
-             type='map'}}
+             type='map'
+             gopt_draggable=gopt_draggable}}
 
 <div class="controls">
   <label>
