add custom map's style

--- a/app/templates/components/location-map.hbs
+++ b/app/templates/components/location-map.hbs
@@ -5,7 +5,8 @@
              zoom=zoom
              gopt_zoomControl=false
              type='map'
-             gopt_draggable=gopt_draggable}}
+             gopt_draggable=gopt_draggable
+             gopt_styles=mapStyles}}
 
 <div class="controls">
   <label>
